--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ install:
   - python3 -m pip install --upgrade pip
   - python3 -m pip install telebot pymongo aiohttp
   - pip install -r requirements.txt
-
+  - pip install python-telegram-bot
+  - pip install telebot flask aiogram python-telegram-bot
 script:
   # Run the Python script
   - chmod +x * && chmod +x Moin && python3 Moin.py
